# AIB-server

./: .coverage  .editorconfig  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  run.py
alembic/: env.py
alembic/versions/: b3de2b319cfb_initial_migration.py  bdc6fe2a8be0_initial_migration.py
src/: main.py
src/api/v1/endpoints/: chat_api.py  hello_api.py  user_api.py
src/database/: database.py  model.py
src/database/migrations/: 20240610_taehun.sql
src/integrations/: chatgpt_integration.py  llama_integration.py
src/services/: chat_service.py  mysql_service.py  user_service.py
tests/test_api/: .coverage  chat_api.py  db_test_api.py  hello_api.py  user_api.py
tests/test_integraions/: .coverage  chatgpt_integration.py
tests/test_services/: .coverage  chat_service_test.py
