[tool.poetry]
name = "aib"
version = "0.1.0"
description = ""
authors = ["taehun2767 <abc2767@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.1"
openai = "^1.30.5"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"
torch = "^2.3.0"
transformers = "^4.41.2"
langchain-community = "^0.2.1"
llama-cpp-python = "^0.2.77"
pytest-cov = "^5.0.0"
huggingface-hub = "^0.23.3"
httpx-oauth = "^0.14.1"
email-validator = "^2.2.0"
alembic = "^1.13.1"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
